# QtStreamViewer

./: CMakeLists.txt  CMakePresets.json  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  README.md  ReceptionWorker.h  RenderingWorker.h  ThreadSafeQueue.h  Worker.h  client.cpp  server.cpp
client/: Decoder.h  Encoder.h  client.cpp
server/: DecodingWorker.h
